* 0.11.0-beta.3 (unreleased)
   * Differentiated more significantly the energy / kinetic / plasma weapon groups
   * Fixed hard crash when loading when approaching certain NPCs
   * Fixed crash when change tab triggers a takeoff
   * Fixed Naev not starting on Mac OS
   * Fixed beam collisions (again)
   * Fixed rare hard crash when beams are being fired
   * Buffed Targeting Conduit
   * Renamed 'Point of Interest' to 'Sensor Anomaly'
   * Double-tap activating outfits breaks stealth
   * Nerfed Sirius Fidelity so it can no longer get ludicrous levels of action speed
   * Map's discovery mode shows system features
   * Removed enemies from a certain hidden faction so the player won't have standing issues with them
   * Non-weapon outfits no longer show switch groups they are in as hot keys
   * Turn off weapon sets when changing type
   * Fixed toggle weapon sets not triggering outfits over and over as expected
   * Turn off all weapon sets when entering stealth
   * Fixed resizing not working on the background and toolkit in some cases
   * Added pilot.weapsetAddType and pilot.weapsetSetActive
   * Gave unicorp storm launchers a rarity of 2 and made it more available
   * Have ships be a little less spammy distressing
   * Centered tracking icon in slim GUI
   * Show tracking icons for non-turret bolt weapons too
   * More short names for weapon outfits
   * `test_of_renewal`: fixed weapon set defaults being incorrect and increased enemy damage
   * `seek_n_destroy`: missions should work properly when boarding the target
   * `flf_diversion`, `flf_rogue`: Missions should no longer be able to have ridiculously low credit rewards
   * `ec00`: changed it so you can't hail the collective drone
   * Fixed many typos

* 0.11.0-beta.2
   * Slim GUI now shows activated outfits and all weapons all the time
   * Collision system reworked (again) to take into account fast moving particles
   * Fixed collision polygons not properly being used