@@ -119,8 +119,10 @@ static int pilot_weapSetFire( Pilot *p, PilotWeaponSet *ws, int level )
       }
       time = weapon_targetFlyTime( o, p, &wt );
 
-      /* Only "inrange" outfits. */
-      if (ws->inrange && (outfit_duration(o)<time))
+      /* Only "inrange" outfits.
+       * XXX for simplicity we are using pilot position / velocity instead of mount point, which might be a bit off. */
+      if (ws->inrange && ((outfit_duration(o)<time) ||
+               (!weapon_inArc( o, p, &wt, &p->solid.pos, &p->solid.vel, p->solid.dir, time))))
          continue;
 
       /* Shoot the weapon of the weaponset. */
